# mangopi-web

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  mangopi_web.py  pyproject.toml
.github/workflows/: ci.yml
mangopi_web/: __init__.py  __main__.py
mangopi_web/mock/: fake_cli.py
mangopi_web/templates/: base.html  index.html
mangopi_web/templates/partials/: event_fragment.html  task_item_oob.html
mock/: fake_cli.py
static/: sse.js
templates/: base.html  index.html
templates/partials/: event_fragment.html  phase_pipeline.html  pipeline_oob.html  task_detail.html  task_item.html  task_item_oob.html  task_list.html  task_phase_view.html
tests/: .test_api_.py.swp  test_api.py  test_database.py
