[build-system]
requires = ["setuptools>=61.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mangopi-web"
dynamic = ["version"]
description = "Web UI for mangopi-cli — an AI-driven task automation pipeline with real-time streaming, SSE, and HTMX"
readme = "README.md"
authors = [{name = "moofs"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "mangopi-cli>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/w4n9H/mangopi-web"

[project.scripts]
mangopi-web = "mangopi_web:main"

[tool.setuptools.dynamic]
version = {attr = "mangopi_web.__version__"}

[tool.setuptools]
py-modules = ["mangopi_web"]
